--- a/nginx.conf
+++ b/nginx.conf
@@ -25,12 +25,12 @@ server {
     }
 
     location /order {
-        proxy_pass http://order-service:3000/;
+        proxy_pass http://best-buy-order-service:3000/;
         proxy_http_version 1.1;
     }
 
     location /products {
-        proxy_pass http://product-service:3002/;
+        proxy_pass http://best-buy-product-service:3002/;
         proxy_http_version 1.1;
     }
 }
